<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/mealName"
        android:layout_marginStart="4dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/meal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/foodList"
        android:layout_marginStart="4dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/mealName"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/food_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/dateText"
        android:layout_below="@+id/foodList"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:text="@string/date_text"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateText"
        android:layout_centerHorizontal="true"
        android:text="@string/calories"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/caloriesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_alignBaseline="@id/calories"
        android:layout_toEndOf="@id/calories"
        android:text="@string/calories_count"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calories"
        android:layout_centerHorizontal="true"
        android:text="@string/carbs"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/carbsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_alignBaseline="@id/carbs"
        android:layout_toEndOf="@id/calories"
        android:text="@string/carbs_count"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/carbs"
        android:layout_centerHorizontal="true"
        android:text="@string/protein"
        android:textSize="24sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/proteinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_alignBaseline="@id/protein"
        android:layout_toEndOf="@id/calories"
        android:text="@string/protein_count"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/hasChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:text="@string/hasChild"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>